tests/NormalTests/paczka2/big_fuzzy/25833139.err
Error in line 1: 8K9617it S718 35,2
Error in line 16: 4WBLB A299 77,64
Error in line 10: jExO8AD A584 87,0
Error in line 24: 4WBLB A299 89,8
Error in line 31: M9qph2cej8Q A584 49,0
Error in line 38: M9qph2cej8Q A299 61,9
Error in line 47: 0Ay A42 ;;,3
Error in line 41: 3MP A584 20,9
Error in line 65: 3MP S718 205,8
Error in line 75: 3MP A584 39,8
Error in line 92: jExO8AD A299 255,4
Error in line 85: 4WBLB A299 11,0
Error in line 95: 3MP A299 156,4
Error in line 99: 4WBLB S718 10,5
Error in line 93: 0Ay A584 97,5
Error in line 100: 3MP A584 87,4
Error in line 97: 8K9617it A584 84,5
Error in line 117: 4WBLB A42 87,8
Error in line 115: jExO8AD A299 3,3
Error in line 77: M9qph2cej8Q S718 138,6
Error in line 109: 3MP S718 73,4
Error in line 134: 0Ay A584 77,7
Error in line 125: jExO8AD A42 92,5
Error in line 96: A299 A42 326,9
Error in line 145: A299 A299 83,9
Error in line 143: 3MP A42 88,6
Error in line 161: 3MP A584 446,3
Error in line 162: 0Ay A42 41,5
Error in line 164: A299 A299 43,8
Error in line 169: 8K9617it S718 54,1
Error in line 167: 0Ay A584 77,8
Error in line 190: M9qph2cej8Q A42 75,9
Error in line 191: M9qph2cej8Q A299 13,2
Error in line 186: A299 A42 92,3
Error in line 225: 3MP A584 72,2
Error in line 230: jExO8AD A584 88,4
Error in line 228: 3MP A299 27,6
Error in line 216: M9qph2cej8Q A584 69,1
Error in line 248: 8K9617it A584 159,31
